[tool.poetry]
authors = ["abersheeran <me@abersheeran.com>"]
description = ""
license = "Apache-2.0"
name = "cool"
readme = "README.md"
version = "0.1.3"

homepage = "https://github.com/abersheeran/cool"
repository = "https://github.com/abersheeran/cool"

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: Implementation :: CPython",
]

packages = [
  {include = "cool"},
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
pytest = "^5.4.3"
pytest-cov = "^2.11.1"

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if False:",
  "assert False",
]
show_missing = true
skip_covered = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
