[project]
name = "cool"
dynamic = ["version"]
description = "Make Python code cooler."
authors = [{ name = "abersheeran", email = "me@abersheeran.com" }]
dependencies = []
requires-python = ">=2.7"
license = { text = "Apache-2.0" }
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/abersheeran/cool"
repository = "https://github.com/abersheeran/cool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cool/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["cool"]

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if False:",
  "assert False",
]
show_missing = true
skip_covered = true
